--- a/src/SAPDms.Core/SAPDms.Core.csproj
+++ b/src/SAPDms.Core/SAPDms.Core.csproj
@@ -13,4 +13,12 @@
 
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dbosoft.YaNco.Core" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SAPDms.Primitives\SAPDms.Primitives.csproj" />
+  </ItemGroup>
+
 </Project>
