--- a/src/SAPDms.Primitives/SAPDms.Primitives.csproj
+++ b/src/SAPDms.Primitives/SAPDms.Primitives.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,5 +11,9 @@
     <RepositoryUrl>https://github.com/dbosoft/sap-dmsclient</RepositoryUrl>
     <Description>A library for SAP document management</Description>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dbosoft.Functional" Version="1.0.0" />
+  </ItemGroup>
 
 </Project>
