--- a/src/SAPDms.Core/SAPDms.Core.csproj
+++ b/src/SAPDms.Core/SAPDms.Core.csproj
@@ -15,6 +15,10 @@
 
   <ItemGroup>
     <PackageReference Include="Dbosoft.YaNco.Core" Version="3.1.0" />
+    <PackageReference Include="GitVersionTask" Version="5.3.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
