--- a/src/SAPDms.Primitives/SAPDms.Primitives.csproj
+++ b/src/SAPDms.Primitives/SAPDms.Primitives.csproj
@@ -14,6 +14,10 @@
 
   <ItemGroup>
     <PackageReference Include="Dbosoft.Functional" Version="1.0.0" />
+    <PackageReference Include="GitVersionTask" Version="5.3.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
