--- a/src/SAPDms.Core/SAPDms.Core.csproj
+++ b/src/SAPDms.Core/SAPDms.Core.csproj
@@ -13,4 +13,16 @@
 
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dbosoft.YaNco.Core" Version="3.1.0" />
+    <PackageReference Include="GitVersionTask" Version="5.3.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SAPDms.Primitives\SAPDms.Primitives.csproj" />
+  </ItemGroup>
+
 </Project>
