--- a/src/SAPDms.Primitives/SAPDms.Primitives.csproj
+++ b/src/SAPDms.Primitives/SAPDms.Primitives.csproj
@@ -13,8 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dbosoft.Functional" Version="1.0.0" />
-    <PackageReference Include="GitVersionTask" Version="5.3.7">
+    <PackageReference Include="Dbosoft.YaNco" Version="4.0.0" />
+    <PackageReference Include="GitVersion.MsBuild" Version="5.6.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
